# spacetraders-sdk-v4

./: .flake8  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  ratelimit_generated.py  requirements.txt
.github/workflows/: python.yml
docs/: AcceptContract200Response.md  AcceptContract200ResponseData.md  Agent.md  AgentsApi.md  Chart.md  Construction.md  ConstructionMaterial.md  Contract.md  ContractDeliverGood.md  ContractPayment.md  ContractTerms.md  ContractsApi.md  Cooldown.md  CreateChart201Response.md  CreateChart201ResponseData.md  CreateShipShipScan201Response.md  CreateShipShipScan201ResponseData.md  CreateShipSystemScan201Response.md  CreateShipSystemScan201ResponseData.md  CreateShipWaypointScan201Response.md  CreateShipWaypointScan201ResponseData.md  CreateSurvey201Response.md  CreateSurvey201ResponseData.md  DefaultApi.md  DeliverContract200Response.md  DeliverContract200ResponseData.md  DeliverContractRequest.md  DockShip200Response.md  ExtractResources201Response.md  ExtractResources201ResponseData.md  ExtractResources201ResponseDataEventsInner.md  ExtractResourcesRequest.md  Extraction.md  ExtractionYield.md  Faction.md  FactionTrait.md  FactionsApi.md  FleetApi.md  FulfillContract200Response.md  GetAgents200Response.md  (+136 more)
spacetraders_sdk/: __init__.py  astar.py  logger.py  path_finder.py  path_finder_http.py  sdk.py  storage.py  util.py
spacetraders_sdk/json/: default.py
spacetraders_sdk/openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
tooling/: model_generator.py  util.py
(+189 files in other folders)
